# damn_rich

./: .cursorrules  .gitignore  README.md  data_pipeline_demo.py  env.example  main.py  pyproject.toml
src/damn_rich/: __init__.py
src/damn_rich/data/: data_manager.py  historical_fetcher.py  market_data.py
src/damn_rich/database/: connection.py  init_data.py  models.py  storage.py  validators.py
src/damn_rich/database/migrations/: base_migration.py
src/damn_rich/exchange/: __init__.py  binance_client.py
src/damn_rich/infrastructure/: __init__.py
src/damn_rich/services/: __init__.py  data_sync_service.py  trading_bot_service.py
src/damn_rich/task/: __init__.py  base_task.py  kline_sync_task.py  scheduler_service.py
src/damn_rich/utils/: config.py  logger.py
