[project]
name = "damn-rich"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.16.5",
    "apscheduler>=3.10.4",
    "asyncpg>=0.30.0",
    "ccxt>=4.5.5",
    "pandas>=2.3.2",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "redis>=5.0.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "websocket-client>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/damn_rich"]
